# Bazartalks_Py2Cplus

./: .gitignore  CHECKSUMS.sha256  CMakeLists.txt  CMakePresets.json  README.md  com.umashankar.backupkafkalogs.plist  com.umashankar.kafkacdcconsumercpp.plist  com.umashankar.kafkasignalconsumercpp.plist  com.umashankar.rotatekafkalogs.plist  requirements.md  vcpkg-configuration.json  vcpkg.json
libs/calendar/: CMakeLists.txt
libs/calendar/include/bazaartalks/calendar/: trading_calendar.hpp
libs/calendar/src/: trading_calendar.cpp
libs/calendar/tests/: trading_calendar_tests.cpp
libs/linalg/: CMakeLists.txt
libs/linalg/include/bazaartalks/linalg/: regression.hpp
libs/linalg/src/: regression.cpp
libs/linalg/tests/: regression_tests.cpp
libs/quant_core/: CMakeLists.txt
libs/quant_core/benchmark/: CMakeLists.txt
libs/quant_core/benchmark/include/bazaartalks/quant_core/: benchmark.hpp
libs/quant_core/benchmark/src/: benchmark.cpp
libs/quant_core/benchmark/tests/: benchmark_tests.cpp
libs/quant_core/charts/: CMakeLists.txt
libs/quant_core/charts/include/bazaartalks/quant_core/: charts.hpp
libs/quant_core/charts/src/: charts.cpp
libs/quant_core/charts/tests/: charts_tests.cpp
libs/quant_core/cost_models/: CMakeLists.txt
libs/quant_core/cost_models/include/bazaartalks/quant_core/: net_of_cost.hpp
libs/quant_core/cost_models/src/: net_of_cost.cpp
libs/quant_core/cost_models/tests/: net_of_cost_tests.cpp
libs/quant_core/crowding/: CMakeLists.txt
libs/quant_core/crowding/include/bazaartalks/quant_core/: crowding.hpp
libs/quant_core/crowding/src/: crowding.cpp
libs/quant_core/crowding/tests/: crowding_tests.cpp
libs/quant_core/darvas_volume/: CMakeLists.txt
libs/quant_core/darvas_volume/include/bazaartalks/quant_core/: darvas_volume.hpp
libs/quant_core/darvas_volume/src/: darvas_volume.cpp
libs/quant_core/darvas_volume/tests/: darvas_volume_tests.cpp
libs/quant_core/dvm_composite/: CMakeLists.txt
libs/quant_core/dvm_composite/include/bazaartalks/quant_core/: dvm_composite.hpp
libs/quant_core/dvm_composite/src/: dvm_composite.cpp
libs/quant_core/dvm_composite/tests/: dvm_composite_tests.cpp
libs/quant_core/dvm_engine/: CMakeLists.txt
libs/quant_core/dvm_engine/include/bazaartalks/quant_core/: dvm_engine.hpp
libs/quant_core/dvm_engine/src/: dvm_engine.cpp
libs/quant_core/dvm_engine/tests/: dvm_engine_tests.cpp
libs/quant_core/dvm_global/: CMakeLists.txt
libs/quant_core/dvm_global/include/bazaartalks/quant_core/: dvm_global.hpp
libs/quant_core/dvm_global/src/: dvm_global.cpp
libs/quant_core/dvm_global/tests/: dvm_global_tests.cpp
libs/quant_core/factor_research/: CMakeLists.txt
libs/quant_core/factor_research/include/bazaartalks/quant_core/: factor_research.hpp
libs/quant_core/factor_research/src/: factor_research.cpp
libs/quant_core/factor_research/tests/: factor_research_tests.cpp
libs/quant_core/fx/: CMakeLists.txt
libs/quant_core/fx/include/bazaartalks/quant_core/: fx.hpp
libs/quant_core/fx/src/: fx.cpp
libs/quant_core/fx/tests/: fx_tests.cpp
libs/quant_core/hft_selection/: CMakeLists.txt
libs/quant_core/hft_selection/include/bazaartalks/quant_core/: hft_selection.hpp
libs/quant_core/hft_selection/src/: hft_selection.cpp
libs/quant_core/hft_selection/tests/: hft_selection_tests.cpp
libs/quant_core/meta_screen/: CMakeLists.txt
libs/quant_core/meta_screen/src/: meta_screen.cpp
libs/quant_core/meta_screen/tests/: meta_screen_tests.cpp
libs/quant_core/ml_signal_engine/: CMakeLists.txt
libs/quant_core/ml_signal_engine/src/: ml_signal_engine.cpp
libs/quant_core/ml_signal_engine/tests/: compute_features_tests.cpp  ml_signal_engine_unit_tests.cpp  predict_ridge_tests.cpp
libs/quant_core/momentum_breakout/: CMakeLists.txt
libs/quant_core/momentum_breakout/src/: momentum_breakout.cpp
libs/quant_core/momentum_breakout/tests/: momentum_breakout_tests.cpp
libs/quant_core/pit_backtest/: CMakeLists.txt
libs/quant_core/pit_backtest/src/: pit_backtest.cpp
libs/quant_core/pit_backtest/tests/: pit_backtest_tests.cpp
libs/quant_core/pit_global/: CMakeLists.txt
libs/quant_core/pit_global/src/: pit_global.cpp
libs/quant_core/pit_global/tests/: pit_global_tests.cpp
libs/quant_core/portfolio/: CMakeLists.txt
libs/quant_core/portfolio/src/: portfolio.cpp
libs/quant_core/portfolio/tests/: portfolio_tests.cpp
libs/quant_core/quality_factor/: CMakeLists.txt
libs/quant_core/quality_factor/src/: quality_factor.cpp
libs/quant_core/quality_factor/tests/: quality_factor_tests.cpp
libs/quant_core/query_catalog/: CMakeLists.txt
libs/quant_core/query_catalog/src/: query_catalog.cpp
libs/quant_core/query_catalog/tests/: query_catalog_tests.cpp
libs/quant_core/risk/: CMakeLists.txt
libs/quant_core/risk/include/bazaartalks/quant_core/: risk.hpp
libs/quant_core/risk/src/: risk.cpp
libs/quant_core/risk/tests/: risk_tests.cpp
libs/quant_core/screen_viability/: CMakeLists.txt
libs/quant_core/screen_viability/src/: screen_viability.cpp
libs/quant_core/screen_viability/tests/: screen_viability_tests.cpp
libs/quant_core/ticker_view/: CMakeLists.txt
libs/quant_core/ticker_view/src/: ticker_view.cpp
libs/quant_core/ticker_view/tests/: ticker_view_tests.cpp
libs/quant_core/turbulence_index/: CMakeLists.txt
libs/quant_core/turbulence_index/src/: turbulence_index.cpp
libs/quant_core/turbulence_index/tests/: turbulence_index_tests.cpp
libs/quant_core/universe/: CMakeLists.txt
libs/quant_core/universe/src/: pit_panel.cpp  survivorship.cpp
libs/quant_core/universe/tests/: pit_panel_tests.cpp  survivorship_tests.cpp
libs/quant_core/unlisted_valuation/: CMakeLists.txt
libs/quant_core/unlisted_valuation/src/: unlisted_valuation.cpp
libs/quant_core/unlisted_valuation/tests/: unlisted_valuation_tests.cpp
libs/stats/: CMakeLists.txt
libs/stats/include/bazaartalks/stats/: cross_sectional.hpp  technical_indicators.hpp
libs/stats/src/: cross_sectional.cpp  technical_indicators.cpp
libs/stats/tests/: cross_sectional_tests.cpp  technical_indicators_tests.cpp
(+83 files in other folders)
