add_subdirectory(risk)
add_subdirectory(cost_models)
add_subdirectory(universe)
add_subdirectory(meta_screen)
add_subdirectory(fx)
add_subdirectory(unlisted_valuation)
add_subdirectory(crowding)
add_subdirectory(hft_selection)
add_subdirectory(darvas_volume)
add_subdirectory(portfolio)
add_subdirectory(factor_research)
add_subdirectory(quality_factor)
add_subdirectory(ml_signal_engine)
add_subdirectory(benchmark)
add_subdirectory(momentum_breakout)
add_subdirectory(turbulence_index)
add_subdirectory(dvm_global)
add_subdirectory(dvm_engine)
add_subdirectory(dvm_composite)
add_subdirectory(screen_viability)
add_subdirectory(pit_backtest)
add_subdirectory(pit_global)
add_subdirectory(query_catalog)

